Few questions solved from assignment

--- a/DayWiseMaterial/Assignments/3rd_Sept_Control_flow_assignment.ipynb
+++ b/DayWiseMaterial/Assignments/3rd_Sept_Control_flow_assignment.ipynb
@@ -529,10 +529,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Year 2023 is not a LEAP year.\n",
+      "Year 2024 is a LEAP year.\n",
+      "Year 2100 is a LEAP year and a CENTURY year.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Approach - Leap year is year divisible by 4 \n",
+    "# Century year is year divisible by 100, since 100 is divisible by 4 so it is leap year too\n",
+    "\n",
+    "# Function - Takes year number as input and print whether it is LEAP year, century year or not leap year.\n",
+    "def print_year_details(year: int):\n",
+    "    # If divisible by 4 then check if further divisible by 100 if yes then leap + century else leap\n",
+    "    if year % 4 == 0:\n",
+    "        if year % 100 == 0:\n",
+    "            print(f'Year {year} is a LEAP year and a CENTURY year.')\n",
+    "        else:\n",
+    "            print(f'Year {year} is a LEAP year.')\n",
+    "    else:\n",
+    "        print(f'Year {year} is not a LEAP year.')\n",
+    "\n",
+    "# Take input of year\n",
+    "year1 = int(input('Enter year1: '))\n",
+    "year2 = int(input('Enter year2: '))\n",
+    "year3 = int(input('Enter year3: '))\n",
+    "\n",
+    "# Print result\n",
+    "print_year_details(year1)\n",
+    "print_year_details(year2)\n",
+    "print_year_details(year3)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -543,10 +577,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number entered i.e. 22 is Positve\n",
+      "Number entered i.e. -12 is Negative\n",
+      "Number entered i.e. 0 is Zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assumption - consider 0 as positive\n",
+    "\n",
+    "# Function - takes number as input and print if number is positive, negative or zero\n",
+    "def print_number_positivity(n: int):\n",
+    "    if  n >= 0:\n",
+    "        if n == 0:\n",
+    "            print(f'Number entered i.e. {n} is Zero')\n",
+    "        else:\n",
+    "            print(f'Number entered i.e. {n} is Positve')\n",
+    "    else:\n",
+    "        print(f'Number entered i.e. {n} is Negative')\n",
+    "\n",
+    "# Input number from user\n",
+    "number1 = int(input('Enter a number1: '))\n",
+    "number2 = int(input('Enter a number2: '))\n",
+    "number3 = int(input('Enter a number3: '))\n",
+    "\n",
+    "# Print\n",
+    "print_number_positivity(number1)\n",
+    "print_number_positivity(number2)\n",
+    "print_number_positivity(number3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -557,38 +623,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your age is 34 and you are not teenager.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function - takes age as input and return if age >= 13 and age <= 19\n",
+    "def is_teenager(age: int) -> bool:\n",
+    "    if age >= 13 and age <= 19:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "\n",
+    "# Take input of age\n",
+    "age = int(input('Enter your age: '))\n",
+    "\n",
+    "# Print\n",
+    "if is_teenager(age):\n",
+    "    print(f'Your age is {age} and you are teenager.')\n",
+    "else:\n",
+    "    print(f'Your age is {age} and you are not teenager.')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 16. Develop a program that determines the type of angle based on its measure (acute, obtuse, or right)."
+    "### 16. Develop a program that determines the type of angle based on its measure (acute, obtuse, or right).\n",
+    "\n",
+    "Definitions - Note: we have added reflex type of angle too for completeness\n",
+    "\n",
+    "> ACUTE : The angle that measures less than 90 degrees is the acute angle. The degree always measures between 0 and 90.\n",
+    "\n",
+    "> RIGHT : The angle that exactly measures 90 degrees is a right angle.\n",
+    "\n",
+    "> OBSTUSE: The angle that measures more than 90 degrees and less than 180 degrees is an obtuse angle.\n",
+    "\n",
+    "> REFLEX: The angle that measures more than 180 degrees and less than 360 degrees is the reflex angle."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Angle 120 degree is OBTUSE angle\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function - takes angle as input, print type of angle\n",
+    "def print_angle_type(angle: int):\n",
+    "    if angle > 0 and angle < 90:\n",
+    "        print(f'Angle {angle} degree is ACUTE angle')\n",
+    "    elif angle == 90:\n",
+    "        print(f'Angle {angle} degree is RIGHT angle')\n",
+    "    elif angle > 90 and angle < 180:\n",
+    "        print(f'Angle {angle} degree is OBTUSE angle')\n",
+    "    else:\n",
+    "        print(f'Angle {angle} degree is REFLEX angle')\n",
+    "\n",
+    "# Get angle input\n",
+    "angle = int(input('Enter a angle: '))\n",
+    "\n",
+    "# Print\n",
+    "print_angle_type(angle)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 17. Write a Python program to calculate the roots of a quadratic equation."
+    "### 17. Write a Python program to calculate the roots of a quadratic equation.\n",
+    "\n",
+    "Quadratic equation:\n",
+    ">ax2 + bx + c = 0, where a, b and c are real numbers and a ≠ 0\n",
+    "\n",
+    "Important Formulas on Roots of Quadratic Equations:\n",
+    "> The roots are calculated using the formula, x = (-b ± √ (b2 - 4ac) )/2a. Discriminant is, D = b2 - 4ac. If D > 0, then the equation has two real and distinct roots. If D = 0, then the equation has two real and same roots. If D < 0, the equation has two complex roots.\n",
+    "\n",
+    "x = (-b ± sqrt((b2 - 4ac)))/2a\n",
+    "\n",
+    "> D > 0 : Real and Distinct roots\n",
+    "\n",
+    "> D == 0 : Real and Same Roots\n",
+    "\n",
+    "> D  > 0 : Complex roots"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Roots are real and different.\n",
+      "x = -1.0 or x = -4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "# Function - prints the roots and related info\n",
+    "def print_roots_of_quadratic_equation(a: int, b: int, c: int):\n",
+    "    if a == 0:\n",
+    "        print('Not a valid Quadratic equation.')\n",
+    "    else:\n",
+    "        # D = b2 - 4ac\n",
+    "        D = (b ** 2) - (4 * a * c)\n",
+    "\n",
+    "        square_root_D = math.sqrt(D)\n",
+    "\n",
+    "        if D == 0:\n",
+    "            # D = 0, (-b + sqrt(D))/2a = -b so -b/2a\n",
+    "            root = (-b  / (2 * a))\n",
+    "            print('Roots are real and same.')\n",
+    "            print(f'x = {root}')\n",
+    "        elif D > 0:\n",
+    "            root1 = (-b + square_root_D)/(2 * a)\n",
+    "            root2 = (-b - square_root_D)/(2 * a)\n",
+    "            print('Roots are real and different.')\n",
+    "            print(f'x = {root1} or x = {root2}')\n",
+    "        else:\n",
+    "            root1 = (-b + square_root_D)/(2 * a)\n",
+    "            root2 = (-b - square_root_D)/(2 * a)\n",
+    "            print('Roots are complex.')\n",
+    "            print(f'x = {root1} or x = {root2}')\n",
+    "\n",
+    "\n",
+    "# Compute and print result\n",
+    "print_roots_of_quadratic_equation(1, 5, 4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -616,13 +797,90 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Approach - Leap year is year divisible by 4 \n",
+    "\n",
+    "# Function - Takes year number as input and print whether it is LEAP year or not leap year.\n",
+    "def print_year_details(year: int):\n",
+    "    # If divisible by 4 then check if further divisible by 100 if yes then leap + century else leap\n",
+    "    if year % 4 == 0:\n",
+    "        if year % 400 == 0:\n",
+    "            print(f'Year {year} is a LEAP year and divisible by 400.')\n",
+    "        else:\n",
+    "            print(f'Year {year} is a LEAP year.')\n",
+    "    else:\n",
+    "        print(f'Year {year} is not a LEAP year.')\n",
+    "\n",
+    "# Take input of year\n",
+    "year1 = int(input('Enter year1: '))\n",
+    "year2 = int(input('Enter year2: '))\n",
+    "year3 = int(input('Enter year3: '))\n",
+    "\n",
+    "# Print result\n",
+    "print_year_details(year1)\n",
+    "print_year_details(year2)\n",
+    "print_year_details(year3)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 20. Develop a program that checks if a given number is prime or not using nested if-else statements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number 31 is Prime number\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "# Recursive Function - to compute prime number or not - USING NESTED if-else\n",
+    "def is_prime_number(number: int, divisor: int) -> bool:\n",
+    "    # Nested if else - as required in question\n",
+    "    if number % divisor == 0:\n",
+    "        if divisor == 1:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "    else:\n",
+    "        return is_prime_number(number, divisor - 1)\n",
+    "\n",
+    "# Number input from user\n",
+    "number = int(input('Enter your number: '))\n",
+    "\n",
+    "# Check if prime of not\n",
+    "is_prime_num = is_prime_number(number, int(math.sqrt(number)) + 1)\n",
+    "\n",
+    "# Print\n",
+    "if is_prime_num:\n",
+    "    print(f'Number {number} is Prime number')\n",
+    "else:\n",
+    "    print(f'Number {number} is not Prime number')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Elif Statements:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 21. Write a Python program to assign grades based on different ranges of scores using elif statements."
    ]
   },
   {
@@ -636,29 +894,135 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Elif Statements:"
+    "### 22. Implement a program to determine the type of a triangle based on its angles."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 21. Write a Python program to assign grades based on different ranges of scores using elif statements.\n",
-    "### 22. Implement a program to determine the type of a triangle based on its angles.\n",
-    "### 23. Develop a program to categorize a given person's BMI into underweight, normal, overweight, or obese using elif statements.\n",
-    "### 24. Create a program that determines whether a given number is positive, negative, or zero using elif statements.\n",
-    "### 25. Write a Python script to determine the type of a character (uppercase, lowercase, or special) using elif statements.\n",
-    "### 26. Implement a program to calculate the discounted price based on different purchase amounts using elif statements.\n",
-    "### 27. Develop a program to calculate the electricity bill based on different consumption slabs using elif statements.\n",
-    "### 28. Create a program to determine the type of quadrilateral based on its angles and sides using elif statements.\n",
-    "### 29. Write a Python script to determine the season based on a user-provided month using elif statements.\n",
-    "### 30. Implement a program to determine the type of a year (leap or common) and month (30 or 31 days) using elif statements."
+    "### 23. Develop a program to categorize a given person's BMI into underweight, normal, overweight, or obese using elif statements."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### 24. Create a program that determines whether a given number is positive, negative, or zero using elif statements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 25. Write a Python script to determine the type of a character (uppercase, lowercase, or special) using elif statements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 26. Implement a program to calculate the discounted price based on different purchase amounts using elif statements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 27. Develop a program to calculate the electricity bill based on different consumption slabs using elif statements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 28. Create a program to determine the type of quadrilateral based on its angles and sides using elif statements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 29. Write a Python script to determine the season based on a user-provided month using elif statements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 30. Implement a program to determine the type of a year (leap or common) and month (30 or 31 days) using elif statements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Assignment Questions\n",
+    "## Basic Level:"
+   ]
   },
   {
    "cell_type": "markdown",
