--- a/DayWiseMaterial/Assignments/3rd_Sept_Control_flow_assignment.ipynb
+++ b/DayWiseMaterial/Assignments/3rd_Sept_Control_flow_assignment.ipynb
@@ -591,8 +591,6 @@
     }
    ],
    "source": [
-    "# Assumption - consider 0 as positive\n",
-    "\n",
     "# Function - takes number as input and print if number is positive, negative or zero\n",
     "def print_number_positivity(n: int):\n",
     "    if  n >= 0:\n",
@@ -696,7 +694,7 @@
     "        print(f'Angle {angle} degree is REFLEX angle')\n",
     "\n",
     "# Get angle input\n",
-    "angle = int(input('Enter a angle: '))\n",
+    "angle = int(input('Enter an angle: '))\n",
     "\n",
     "# Print\n",
     "print_angle_type(angle)"
@@ -780,10 +778,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You entered day number: 5\n",
+      "It is Friday!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function - Takes a day (number) of the week and print the name of the week day\n",
+    "def print_day_name(day_number: int):\n",
+    "    if day_number <= 0 or day_number > 7:\n",
+    "        print(f'Week day number should be between 1 to 7, both inclusive.')\n",
+    "    else:\n",
+    "        if day_number == 1:\n",
+    "            print('It is Monday!')\n",
+    "        elif day_number == 2:\n",
+    "            print('It is Tuesday!')\n",
+    "        elif day_number == 3:\n",
+    "            print('It is Wednesday!')\n",
+    "        elif day_number == 4:\n",
+    "            print('It is Thursday!')\n",
+    "        elif day_number == 5:\n",
+    "            print('It is Friday!')\n",
+    "        elif day_number == 6:\n",
+    "            print('It is Saturday!')\n",
+    "        else:\n",
+    "            print('It is Sunday!')\n",
+    "\n",
+    "\n",
+    "# Take input from the user\n",
+    "day_no = int(input('Enter the day number in the week: '))\n",
+    "\n",
+    "# Print\n",
+    "print(f'You entered day number: {day_no}')\n",
+    "print_day_name(day_number=day_no)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -794,9 +829,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Year 2400 is a LEAP year and divisible by 400.\n",
+      "Year 2023 is not a LEAP year.\n",
+      "Year 2024 is a LEAP year.\n"
+     ]
+    }
+   ],
    "source": [
     "# Approach - Leap year is year divisible by 4 \n",
     "\n",
@@ -885,24 +930,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You scored 98.0% marks.\n",
+      "Your Grade is A+\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assumptions : Grades are as below:\n",
+    "# marks range       Grade\n",
+    "# >= 90             A+\n",
+    "# 80-90             A\n",
+    "# 70-60             B\n",
+    "# < 60              C\n",
+    "\n",
+    "# Take input of marks in percentage\n",
+    "score = float(input('Enter yours percentage score: '))\n",
+    "\n",
+    "print(f'You scored {score}% marks.')\n",
+    "\n",
+    "# Print Grade\n",
+    "if score >= 90:\n",
+    "    print('Your Grade is A+')\n",
+    "elif score >= 80:\n",
+    "    print('Your Grade is A')\n",
+    "elif score >= 70:\n",
+    "    print('Your Grade is B')\n",
+    "else:\n",
+    "    print('Your Grade is C')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 22. Implement a program to determine the type of a triangle based on its angles."
+    "### 22. Implement a program to determine the type of a triangle based on its angles.\n",
+    "\n",
+    "Considerations:\n",
+    "> An acute triangle is a triangle whose all the three interior angles are < 90 degrees.\n",
+    "\n",
+    "> Obtuse triangles are those in which one of the three interior angles has a measure greater than 90 degrees.\n",
+    "\n",
+    "> A right triangle is a triangle in which one of the angles is 90 degrees."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Triangle with given Angles (120, 40, 20) is an OBTUSE triangle.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function - takes angles of triangle and print the type of triangle \n",
+    "# Also we will validate the angles by summing up and checking if it is 180 or not. Angles of triangle should sum up to 180.\n",
+    "def print_triangle_type(angle1: int, angle2: int, angle3: int):\n",
+    "    sum_of_angles = angle1 + angle2 + angle3\n",
+    "\n",
+    "    if sum_of_angles != 180:\n",
+    "        print('Not a valid triangle.')\n",
+    "    else:\n",
+    "        if angle1 < 90 and angle2 < 90 and angle3 < 90:\n",
+    "            print(f'Triangle with given Angles {(angle1, angle2, angle3)} is an ACUTE triangle.')\n",
+    "        elif angle1 == 90 or angle2 == 90 or angle3 == 90:\n",
+    "            print(f'Triangle with given Angles {(angle1, angle2, angle3)} is an RIGHT triangle.')\n",
+    "        elif angle1 > 90 or angle2 > 90 or angle3 > 90:\n",
+    "            print(f'Triangle with given Angles {(angle1, angle2, angle3)} is an OBTUSE triangle.')\n",
+    "\n",
+    "# Get angle input\n",
+    "angle1 = int(input('Enter an interior angle 1 of triangle: '))\n",
+    "angle2 = int(input('Enter an interior angle 2 of triangle: '))\n",
+    "angle3 = int(input('Enter an interior angle 3 of triangle: '))\n",
+    "\n",
+    "# Print\n",
+    "print_triangle_type(angle1, angle2, angle3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -913,10 +1027,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your BMI is 22.4 and you are categorized as NORMAL.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Considerations - as per https://www.nhlbi.nih.gov/health/educational/lose_wt/BMI/bmicalc.htm\n",
+    "#   BMI Categories:\n",
+    "#       Underweight = <18.5\n",
+    "#       Normal weight = 18.5–24.9 (we take less than 25 here to consider 24.99 and so on)\n",
+    "#       Overweight = 25–29.9 (we take less than 30 here to consider 29.99 and so on)\n",
+    "#       Obesity = BMI of 30 or greater  \n",
+    "\n",
+    "# Function - takes a input of BMI (float number) and prints category as per above consideration\n",
+    "def print_person_weight_category(bmi: float):\n",
+    "    if bmi < 18.5:\n",
+    "        print(f'Your BMI is {bmi} and you are categorized as UNDERWEIGHT.')\n",
+    "    elif bmi >= 18.5 and bmi < 25:\n",
+    "        print(f'Your BMI is {bmi} and you are categorized as NORMAL.')\n",
+    "    elif bmi >= 25 and bmi < 30:\n",
+    "        print(f'Your BMI is {bmi} and you are categorized as OVERWEIGHT.')\n",
+    "    else:\n",
+    "        print(f'Your BMI is {bmi} and you are categorized as OBESE.')\n",
+    "\n",
+    "\n",
+    "# Take BMI input\n",
+    "bmi = float(input('Enter your BMI: '))\n",
+    "\n",
+    "# Print\n",
+    "print_person_weight_category(bmi)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -927,10 +1074,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number entered i.e. 0 is Zero\n",
+      "Number entered i.e. 20 is Positve\n",
+      "Number entered i.e. -54 is Negative\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function - takes number as input and print if number is positive, negative or zero - using if elif else\n",
+    "def print_number_positivity(n: int):\n",
+    "    if  n == 0:\n",
+    "        print(f'Number entered i.e. {n} is Zero')\n",
+    "    elif n > 0:\n",
+    "        print(f'Number entered i.e. {n} is Positve')\n",
+    "    else:\n",
+    "        print(f'Number entered i.e. {n} is Negative')\n",
+    "\n",
+    "# Input number from user\n",
+    "number1 = int(input('Enter a number1: '))\n",
+    "number2 = int(input('Enter a number2: '))\n",
+    "number3 = int(input('Enter a number3: '))\n",
+    "\n",
+    "# Print\n",
+    "print_number_positivity(number1)\n",
+    "print_number_positivity(number2)\n",
+    "print_number_positivity(number3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -941,10 +1117,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Character R is UPPERCASE.\n",
+      "Character r is lowercase.\n",
+      "Character @ is Special.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function takes a character as inpout and print the type as per question\n",
+    "def print_type_of_character(char: str):\n",
+    "    if char.islower():\n",
+    "        print(f'Character {char} is lowercase.')\n",
+    "    elif char.isupper():\n",
+    "        print(f'Character {char} is UPPERCASE.')\n",
+    "    else:\n",
+    "        print(f'Character {char} is Special.')\n",
+    "\n",
+    "# Print type of character\n",
+    "print_type_of_character('R')\n",
+    "print_type_of_character('r')\n",
+    "print_type_of_character('@')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -955,10 +1155,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your actual purchase amount was: 12000\n",
+      "After applying 20% discount, you have to pay only 9600.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assumptions as below\n",
+    "#    Amount          Discount\n",
+    "#    0-5000          5%\n",
+    "#    5001-10000      10%\n",
+    "#    10001-20000     20%\n",
+    "#    above 20000     30%\n",
+    "\n",
+    "def get_discount_percentage(purchase_amount: int) -> int:\n",
+    "    if purchase_amount <= 5000:\n",
+    "        return 5\n",
+    "    elif purchase_amount <= 10000:\n",
+    "        return 10\n",
+    "    elif purchase_amount <= 20000:\n",
+    "        return 20\n",
+    "    else:\n",
+    "        return 30\n",
+    "\n",
+    "# input purchase amount\n",
+    "purchase_amount = int(input(\"Enter Purchase Amount: \")) \n",
+    "\n",
+    "# Get Discount percentage\n",
+    "discount = get_discount_percentage(purchase_amount)\n",
+    "\n",
+    "# Compute discounted price - 100 - discount will give us percentage of amount to be received\n",
+    "discounted_amount = (100 - discount) * purchase_amount / 100\n",
+    "\n",
+    "# Print\n",
+    "print(f'Your actual purchase amount was: {purchase_amount}')\n",
+    "print(f'After applying {discount}% discount, you have to pay only {discounted_amount}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -969,24 +1208,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You consumed 450 units of electricity and your bill is 6000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assumptions as below\n",
+    "#    Units consumed     Price/Unit in range\n",
+    "#    <= 100              5\n",
+    "#    101-200             10\n",
+    "#    201-300             15\n",
+    "#    >= 301              20\n",
+    "\n",
+    "def calculate_electricity_bill(units_used: int):\n",
+    "    bill = 0\n",
+    "    if units_used <= 100:\n",
+    "        bill = units_used * 5\n",
+    "    elif units_used >= 101 and units_used <= 200:\n",
+    "        bill = (100 * 5) + (units_used - 100) * 10\n",
+    "    elif units_used >= 201 and units_used <= 300:\n",
+    "        bill = (100 * 5) + (100 * 10) + (units_used - 200) * 15\n",
+    "    else:\n",
+    "        bill = (100 * 5) + (100 * 10) + (100 * 15) + (units_used - 300) * 20\n",
+    "    \n",
+    "    return bill\n",
+    "\n",
+    "\n",
+    "# Take input of the units used\n",
+    "units = int(input(\"Enter your units used: \"))\n",
+    "\n",
+    "# Compute bill\n",
+    "electric_bill = calculate_electricity_bill(units)\n",
+    "\n",
+    "# Print\n",
+    "print(f'You consumed {units} units of electricity and your bill is {electric_bill}')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 28. Create a program to determine the type of quadrilateral based on its angles and sides using elif statements."
+    "### 28. Create a program to determine the type of quadrilateral based on its angles and sides using elif statements.\n",
+    "\n",
+    "> A Quadrilateral Is A Shape With 4 Sides And 4 Angles. It can be of following types:\n",
+    "* Square - All four sides have the same length, All angles are equal to each other\n",
+    "* Rhombus  -- All four sides have the same length, Angle 1 equals Angle 3,  Angle 2 equals Angle 4\n",
+    "* Rectangle -- Side 1 equals Side 3, Side 2 equals Side 4, All angles are equal to each other\n",
+    "\n",
+    "> Those quadrilaterals which have at least one of the interior angles greater than 180° are called concave quadrilaterals.\n",
+    "\n",
+    "> Those quadrilaterals in which all the interior angles are less than 180° are called convex quadrilaterals."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Side 1 = 40, Side 2 = 40, Side 3 = 40, Side 4 = 40\n",
+      "Angle 1 = 60, Angle 2 = 120, Angle 3 = 60, Angle 4 = 120\n",
+      "Entered quadrilateral is RHOMBUS and it is convex quadrilateral\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_type_of_quadrilateral(side1: int, side2: int, side3:int, side4: int,\n",
+    "                                angle1: int, angle2: int, angle3: int, angle4: int):\n",
+    "    if angle1 == angle2 == angle3 == angle4 == 90 and side1 == side2 == side3 == side4:\n",
+    "        print('Entered quadrilateral is SQUARE and it is convex quadrilateral')\n",
+    "    elif angle1 == angle2 == angle3 == angle4 == 90 and side1 == side3 and side2 == side4:\n",
+    "        print('Entered quadrilateral is RECTANGLE and it is convex quadrilateral')\n",
+    "    elif angle1 == angle3 and angle2 == angle4 and side1 == side3 == side2 == side4:\n",
+    "        print('Entered quadrilateral is RHOMBUS and it is convex quadrilateral')\n",
+    "    elif angle1 > 180 or angle2 > 180 or angle3 > 180 or angle4 > 180:\n",
+    "        print('Entered quadrilateral is Concave quadrilateral')\n",
+    "\n",
+    "\n",
+    "# Enter Values from user\n",
+    "side1 = int(input('Enter side 1 length: '))\n",
+    "side2 = int(input('Enter side 2 length: '))\n",
+    "side3 = int(input('Enter side 3 length: '))\n",
+    "side4 = int(input('Enter side 4 length: '))\n",
+    "\n",
+    "angle1 = int(input('Enter angle 1 length: '))\n",
+    "angle2 = int(input('Enter angle 2 length: '))\n",
+    "angle3 = int(input('Enter angle 3 length: '))\n",
+    "angle4 = int(input('Enter angle 4 length: '))\n",
+    "\n",
+    "# Print entered values\n",
+    "print(f'Side 1 = {side1}, Side 2 = {side2}, Side 3 = {side3}, Side 4 = {side4}')\n",
+    "print(f'Angle 1 = {angle1}, Angle 2 = {angle2}, Angle 3 = {angle3}, Angle 4 = {angle4}')\n",
+    "\n",
+    "# Print results \n",
+    "print_type_of_quadrilateral(side1, side2, side3, side4, angle1, angle2, angle3, angle4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -997,10 +1323,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You entered: September and it is Autumn\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assumptions:\n",
+    "#   December, January, February\t\t\tWinter\n",
+    "#\tMarch, April, May\t\t\t\t\tSpring\n",
+    "#\tJune, July, August\t\t\t\t\tSummer\n",
+    "#\tSeptember. October, NOvember\t\tAutumn\n",
+    "\n",
+    "def get_season(month_name: str) -> str:\n",
+    "\tmonth_name = month_name.lower()\n",
+    "\tif month_name in ('december', 'january', 'february'):\n",
+    "\t\treturn 'Winter'\n",
+    "\telif month_name in ('march', 'april', 'may'):\n",
+    "\t\treturn 'Spring'\n",
+    "\telif month_name in ('june', 'july', 'august'):\n",
+    "\t\treturn 'Summer'\n",
+    "\telif month_name in ('september', 'october', 'november'):\n",
+    "\t\treturn 'Autumn'\n",
+    "\telse:\n",
+    "\t\treturn 'Not Valid'\n",
+    "\n",
+    "# Take month input\n",
+    "month = input(\"Input the month name (e.g. January, February etc.): \")\n",
+    "\n",
+    "# Get season\n",
+    "season = get_season(month)\n",
+    "\n",
+    "# Print\n",
+    "print(f'You entered: {month} and it is {season}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1011,10 +1373,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Year 2025 is common year and Number of days in month 9 are 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_year_month_details(year: int, month: int):\n",
+    "    # Compute is leap year instead of adding formula in conditions\n",
+    "    is_leap_year = year % 4 == 0\n",
+    "    \n",
+    "    if month == 2 and is_leap_year:\n",
+    "        print(f'Year {year} is leap year and Number of days in month {month} are 29')\n",
+    "    elif month == 2:\n",
+    "        print(f'Year {year} is common year and Number of days in month {month} are 28')\n",
+    "    elif (month==1 or month==3 or month==5 or month==7 or month==8 or month==10 or month==12):\n",
+    "        if is_leap_year:\n",
+    "            print(f'Year {year} is leap year and Number of days in month {month} are 31')\n",
+    "        else:\n",
+    "            print(f'Year {year} is common year and Number of days in month {month} are 31')\n",
+    "    else:\n",
+    "        if is_leap_year:\n",
+    "            print(f'Year {year} is leap year and Number of days in month {month} are 30')\n",
+    "        else:\n",
+    "            print(f'Year {year} is common year and Number of days in month {month} are 30')\n",
+    "\n",
+    "# Take input from user\n",
+    "year = int(input('Enter year: '))\n",
+    "month = int(input('Enter month (1-12): '))\n",
+    "\n",
+    "# Print\n",
+    "print_year_month_details(year, month)"
+   ]
   },
   {
    "cell_type": "markdown",
